--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,72 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+  background-color: #999999;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  flex-flow: column nowrap;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  min-height: 100vh;
+  margin: 0 auto;
+  width: 60%;
+  box-shadow: 10px 10px 5px 5px gray;
+  border: 3px solid grey;
+  border-radius: 10px 10px;
+}
+
+
+.header {
+  background-color: #ffffff;
+  text-align: center;
+  padding-top: 8px;
+  padding-bottom: 25px;
+  border-radius: 10px 10px;
+  border: 3px solid purple;
+}
+
+input[type='text'],
+input[type='number'] {
+  border: 1px solid purple;
+  border-radius: 8px;
+  font-size: 16px;
+  width: 50%;
+  text-align: center;
+  padding: 15px; 
+  box-shadow: 5px 5px grey;
+}
+
+.book-history{
+  
+  text-align: left;
+  padding: 10px;
+  
+}
+
+ul {
+  list-style-type: none;
+
+}
+
+ul li {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: bold;
+}
+ul li:hover{
+  background-color: rgb(147, 97, 191);
+  border-left: 5px solid red;
+  
+}
+
+button {
+  background: #9361bf;
+  padding: 15px;
+  border-radius: 8px;
+  cursor: pointer;
   color: white;
+  font-weight: bold;
+  color: black;
+  font-size: 15px;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button:hover{
+  color:red;
 }
