--- a/src/App.css
+++ b/src/App.css
@@ -21,8 +21,8 @@ body {
   border: 3px solid purple;
 }
 
-input[type='text'],
-input[type='number'] {
+input[type='text']
+ {
   border: 1px solid purple;
   border-radius: 8px;
   font-size: 16px;
@@ -69,4 +69,9 @@ button {
 }
 button:hover{
   color:red;
+}
+
+.searchook {
+  display: flex;
+  justify-content: center;
 }
